Added touch events to file card.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -75,6 +75,7 @@
 	<script src="bower_components/imagesloaded/imagesloaded.js"></script>
 	<script src="bower_components/matches-selector/matches-selector.js"></script>
 	<script src="bower_components/angular-masonry/angular-masonry.js"></script>
+	<script src="bower_components/angular-touch/angular-touch.js"></script>
 	<!-- endbower -->
 	<!-- /REMOVE:JS -->
 
