--- a/Journal/app/directives/art-file-card/art-file-card.html
+++ b/Journal/app/directives/art-file-card/art-file-card.html
@@ -1,8 +1,8 @@
 <div class="layout-container" layout="column" ng-model="t.file" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}"
     data-drag="true" data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt: {top: 5, left: 5}}"
     ng-hide="t.file.visible === false" ng-cloak>
-    <div class="layout-container art-file-card" layout="column" ui-sref="document({fileUri: t.file.uri})">
-        <img class="link" ng-src="{{t.file.thumbnail}}" alt="{{t.file.label}}" ng-right-click="t.showSheet($event)" ui-sref="document({fileUri: t.file.uri})">
+    <div class="layout-container art-file-card" layout="column" ng-click="t.onTouch($event)" ui-sref="document({fileUri: t.file.uri})">
+        <img class="link" ng-src="{{t.file.thumbnail}}" alt="{{t.file.label}}">
 
         <div class="overlay" layout="column">
             <div flex></div>
