Improved file cards.

--- a/Journal/app/dialogs/edit-project-dialog/edit-project-dialog.html
+++ b/Journal/app/dialogs/edit-project-dialog/edit-project-dialog.html
@@ -1,7 +1,7 @@
 <md-dialog>
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2 translate>New project</h2>
+            <md-title class="dialog-title" translate>New project</md-title>
             <span flex></span>
             <md-button class="md-icon-button" ng-click="t.cancel()">
                 <md-icon md-font-icon="zmdi zmdi-close" aria-label="Close dialog"></md-icon>
