--- a/Journal/app/directives/art-window-titlebar/art-window-titlebar.html
+++ b/Journal/app/directives/art-window-titlebar/art-window-titlebar.html
@@ -1,9 +1,9 @@
 <md-toolbar class="art-window-titlebar" layout="row" layout-align="start center">
     <md-button class="md-button-icon" ng-click="navigateBack()" ng-if="canNavigateBack()">
-        <md-icon md-font-icon="zmdi zmdi-chevron-left"></md-icon>
+        <md-icon md-font-icon="zmdi zmdi-arrow-left"></md-icon>
     </md-button>
 
-    <h5 class="window-title"></h5>
+    <md-title class="window-title"></md-title>
 
     <div flex></div>
 
