--- a/Journal/app/states/main/main.html
+++ b/Journal/app/states/main/main.html
@@ -3,11 +3,11 @@
         <md-sidenav id="primary-sidenav" class="md-sidenav-left" md-component-id="left" md-is-locked-open="true" style="max-width: 275px;">
             <md-subhead class="md-padding text-uppercase" style="margin-bottom: 0" translate>Files</md-subhead>
             <md-list>
-                <md-list-item ui-sref="main.view.recently-used({index: 0})" ui-sref-active="md-list-item-active">
+                <md-list-item ui-sref="main.view.recent-files({index: 0})" ui-sref-active="md-list-item-active">
                     <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
                     <div flex translate>Recently Used</div>
                 </md-list-item>
-                <md-list-item ui-sref="main.view.recently-used({index: 1})" ui-sref-active="md-list-item-active">
+                <md-list-item ui-sref="main.view.important-files({index: 1})" ui-sref-active="md-list-item-active">
                     <md-icon md-font-icon="zmdi zmdi-star-outline"></md-icon>
                     <div flex translate>Starred</div>
                 </md-list-item>
