--- a/Journal/index.html
+++ b/Journal/index.html
@@ -98,6 +98,7 @@
 	<script type="text/javascript" src="app/classes/rendering/caching/canvas-cache.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/caching/layer-cache.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/options/document-viewer-options.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/chat-show.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-create-point.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-create-rectangle.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-delete.command.js"></script>
@@ -152,6 +153,7 @@
 	<script type="text/javascript" src="app/directives/art-chat-comment-list/art-chat-comment-list.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-comment/art-chat-comment.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-emoticon-picker/art-chat-emoticon-picker.js"></script>
+	<script type="text/javascript" src="app/directives/art-chat-panel/art-chat-panel.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
 	<script type="text/javascript" src="app/directives/art-color-picker/art-color-picker.js"></script>
 	<script type="text/javascript" src="app/directives/art-document-history-viewer-toolbar/art-document-history-viewer-toolbar.js"></script>
