Bugfix: Only synchronizing resources with synchronization enabled. Bugfix: Using correct predicate for synchronization enabled in SPARQL queries. Bugfix: Failed to parse from JSON -> Not using UriRef in Tag constructor.

--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -1,4 +1,4 @@
-<div class="layout-root" layout="column">
+<div layout="column">
     <div ng-show="t.files.length === 0" flex>
         <div ng-transclude="emptySlot" ng-cloak>
             <div class="text-center">
