Bugfix: Tasks are not displayed multiple times. Feature: Floating chat panel.

--- a/Journal/app/directives/art-chat-panel/art-chat-panel.html
+++ b/Journal/app/directives/art-chat-panel/art-chat-panel.html
@@ -2,6 +2,6 @@
     <h6 class="text-uppercase" translate>Topic</h6>
     
     <div flex>
-        <art-chat-comment-list entity-uri="t.selectedTopic.uri"></art-chat-comment-list>
+        <art-chat-comment-list entity-uri="t.entityUri"></art-chat-comment-list>
     </div>
 </div>
