--- a/Journal/index.html
+++ b/Journal/index.html
@@ -72,14 +72,15 @@
 	<script src="bower_components/imagesloaded/imagesloaded.js"></script>
 	<script src="bower_components/matches-selector/matches-selector.js"></script>
 	<script src="bower_components/angular-masonry/angular-masonry.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+	<script src="bower_components/showdown/src/showdown.js"></script>
+	<script src="bower_components/angular-markdown-directive/markdown.js"></script>
+	<script src="bower_components/ng-letter-avatar/ngletteravatar.js"></script>
 	<script src="bower_components/moment-duration-format/lib/moment-duration-format.js"></script>
 	<script src="bower_components/EaselJS/lib/easeljs-0.8.2.combined.js"></script>
 	<script src="bower_components/yasgui/dist/yasgui.bundled.min.js"></script>
-	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/jquery-textcomplete/dist/jquery.textcomplete.js"></script>
 	<script src="bower_components/emojionearea/dist/emojionearea.js"></script>
-	<script src="bower_components/showdown/src/showdown.js"></script>
-	<script src="bower_components/angular-markdown-directive/markdown.js"></script>
 	<!-- endbower -->
 	<!-- /REMOVE:JS -->
 
@@ -176,6 +177,7 @@
 	<script type="text/javascript" src="app/directives/art-keyboard-input-handler/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="app/directives/art-layer-control/art-layer-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-localization-handler/art-localization-handler.js"></script>
+	<script type="text/javascript" src="app/directives/art-project-member-list/art-project-member-list.js"></script>
 	<script type="text/javascript" src="app/directives/art-project-tabs/art-project-tabs.js"></script>
 	<script type="text/javascript" src="app/directives/art-project-view/art-project-view.js"></script>
 	<script type="text/javascript" src="app/directives/art-query-editor/art-query-editor.js"></script>
