--- a/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
+++ b/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
@@ -1,39 +1,50 @@
-<div class="padding-x-xl padding-y-xl">
-	<form id="form" name="personForm">
-		<art-avatar width="100" height="100" src="t.photoUrl" can-change="true" changed="t.onPhotoChanged"></art-avatar>
-
-		<div class="form-group">
-			<label translate>Name</label><br>
-			<input class="form-control" type="text" ng-model="t.person.Name" ng-change="t.findPersons(t.person.Name)">
+<md-dialog>
+	<md-toolbar>
+		<div class="md-toolbar-tools">
+			<md-title class="dialog-title" translate>Edit Member</md-title>
+			<span flex></span>
+			<md-button class="md-icon-button" ng-click="t.cancel()">
+				<md-icon md-font-icon="zmdi zmdi-close" aria-label="Close dialog"></md-icon>
+			</md-button>
 		</div>
-		
-		<div class="form-group">
-			<label translate>E-Mail</label><br>
-			<input class="form-control" type="text" ng-model="t.person.EmailAddress" ng-change="t.findPersons(t.person.EmailAddress)">
-		</div>
+	</md-toolbar>
+	<md-dialog-content>
+		<div class="md-padding" style="width: 600px; height: 400px;">
+			<form id="form" name="personForm">
+				<art-avatar width="100" height="100" src="t.photoUrl" can-change="true" changed="t.onPhotoChanged"></art-avatar>
 
-		<ul class="list-unstyled list-view">
-			<li class="list-item list-item-link" ng-repeat="person in t.persons">
-				<div class="layout-container padding-x-xs padding-y-xs" ng-click="t.selectPerson(person)">
-					<div class="col">
-						<art-avatar width="40" height="40" src="t.getPhotoUrl(person.Uri)"></art-avatar>
-					</div>
-					<div class="col expand" ng-click="t.editMember(person)">
-						<div class="padding-x-md">
-							<h5 ng-bind="person.Name"></h5>
-							<label ng-bind="person.EmailAddress"></label>
-						</div>
-					</div>
+				<div class="form-group">
+					<label translate>Name</label><br>
+					<input class="form-control" type="text" ng-model="t.person.Name" ng-change="t.findPersons(t.person.Name)">
 				</div>
-			</li>
-		</ul>
-	</form>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<div class="toolbar pull-right">
-			<button class="btn btn-success" type="submit" ng-click="t.commit()" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < t.clientState && t.clientState < 3)"><i class="zmdi zmdi-check"></i></button>
-			<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+
+				<div class="form-group">
+					<label translate>E-Mail</label><br>
+					<input class="form-control" type="text" ng-model="t.person.EmailAddress" ng-change="t.findPersons(t.person.EmailAddress)">
+				</div>
+
+				<ul class="list-unstyled list-view">
+					<li class="list-item list-item-link" ng-repeat="person in t.persons">
+						<div class="layout-container padding-x-xs padding-y-xs" ng-click="t.selectPerson(person)">
+							<div class="col">
+								<art-avatar width="40" height="40" src="t.getPhotoUrl(person.Uri)"></art-avatar>
+							</div>
+							<div class="col expand" ng-click="t.editMember(person)">
+								<div class="padding-x-md">
+									<h5 ng-bind="person.Name"></h5>
+									<label ng-bind="person.EmailAddress"></label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</form>
 		</div>
-	</div>
-</div>
+	</md-dialog-content>
+	<md-dialog-actions layout="row">
+		<div class="md-toolbar" layout="row">
+			<md-button ng-click="t.commit()" class="md-primary" ng-disabled="projectForm.$invalid" translate>Save</md-button>
+			<md-button ng-click="t.cancel()" translate>Cancel</md-button>
+		</div>
+	</md-dialog-actions>
+</md-dialog>
